# libRCT2

./: CMakeLists.txt  image.c  palette.c
src/: chunk.c  large_scenery.c  large_scenery.h  object.c  object.h  path_banner.c  path_banner.h  path_object.c  path_object.h  ride.c  ride.h  scenery_group.c  scenery_group.h  small_scenery.c  small_scenery.h  wall.c  wall.h
